add dependencies, root log level -> INFO

--- a/config/logging_config.yml
+++ b/config/logging_config.yml
@@ -22,5 +22,5 @@ loggers:
     handlers: [console_handler, file_handler]
     propagate: False
 root:
-  level: DEBUG
+  level: INFO
   handlers: [console_handler, file_handler]
