--- a/config/idstools_config.yml
+++ b/config/idstools_config.yml
@@ -1,7 +1,10 @@
 data_explorer:
   console_output: True
   input:
-    file: {"path": "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv", "type": "csv", "sep": ";"}
+    file: 
+      path: "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv"
+      type: "csv"
+      sep: ";"
   split_data: False
   discriptiv_analysis: True
 
