--- a/config/logging_config.yml
+++ b/config/logging_config.yml
@@ -1,7 +1,7 @@
 version: 1
 formatters:
   simple:
-    format: "%(asctime)s [%(levelname)s] - %(message)s"
+    format: "%(asctime)s [%(module)s] [%(levelname)s] - %(message)s"
 handlers:
   console_handler:
     class: logging.StreamHandler
