--- a/config/idstools_config.yml
+++ b/config/idstools_config.yml
@@ -1,86 +1,73 @@
-#This file contains the configuration of the idstools package.
+# This configuration file outlines settings for the idstools package, including data exploration,
+# data preparation, and model optimization modules.
+
+# Version of the configuration format
 version: 1
-#The data_explorer section contains the configuration of the data_explorer module.
+
+# Configuration for the data_explorer module
 data_explorer:
-  # The output_path parameter specifies the path where the results of the data exploration will be saved.
-  output_path: "/home/davidrmn/Studies/introduction-data-science/results"
-  # The input_file parameter specifies the path of the input file.
+  # Path to save the results of data exploration 
+  output_path: Null
+
+  # Specifications for the input data file
   input_file:
-      # The path parameter specifies the path of the input file.
-      path: "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv"
-      # The type parameter specifies the type of the input file. Currently, only csv files are supported.
-      type: "csv"
-      # The sep parameter specifies the separator of the input file.
-      sep: ";"
-  # The discriptiv_analysis parameter specifies if the descriptive analysis will be performed.    
-  discriptiv_analysis: True
-  # The missing_values parameter specifies if the missing values analysis will be performed.
-  missing_value_analysis: True
-  # The correlation_analysis parameter specifies if the correlation analysis will be performed.
-  correlation_analysis: True
-  # The outliers_analysis parameter specifies if the outliers analysis will be performed.
-  outliers_analysis: True
+    # File path for the input data
+    path: "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv"
+    # File format (csv is supported)
+    type: "csv"
+    # Delimiter used in the CSV file
+    sep: ";"
 
-#The data_preparation section contains the configuration of the data_preparation module.
-data_preparation:
-  # The output_path parameter specifies the path where the results of the data preparation will be saved.
-  output_path: "/home/davidrmn/Studies/introduction-data-science/results"
-  # The input_file parameter specifies the path of the input file.
-  input_file: 
-      # The path parameter specifies the path of the input file.
-      path: "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv"
-      # The type parameter specifies the type of the input file. Currently, only csv files are supported.  
-      type: "csv"
-      # The sep parameter specifies the separator of the input file.  
-      sep: ";"
-  # The pipeline parameter specifies the pipeline of the data preparation.    
+  # Flags to enable/disable specific analyses in the data exploration process
   pipeline:
-    # To add an imputer to the pipeline, add a new element to the imputer list.
-    imputer: [
-      {
-      "target": "hum",
-      "config": {
-        "strategy": "mean"
-        }
-      }
-      ]
-    # To add a one hot encoder to the pipeline, add a new element to the one_hot_encoder list.
-    one_hot_encoder: [
-      {
-      "target": "season",
-      "config": {
-        "prefix": "season",
-        "dtype": "int"
-        }
-      },
-      {
-      "target": "mnth",
-      "config": {
-        "prefix": "month",
-        "dtype": "int"
-        }
-      }
-      ]
-    # To add a feature_dropper to the pipeline, add a new element to the feature_dropper list.  
-    feature_dropper: [
-      {
-      "target": "instant",
-      "config": {
-        "axis": 1,
-        "errors": "ignore"
-        }
-      }
-      ]
-    # To add a data_splitter to the pipeline, specify the parameters of the data_splitter.
-    data_splitter:
-      test_size: 0.2
-      random_state: 42
+    descriptive_analysis: True  # Perform descriptive analysis
+    #missing_value_analysis: True  # Analyze missing values in the dataset
+    #correlation_analysis: True  # Conduct correlation analysis
+    #outliers_analysis: True  # Examine outliers
 
-#The model_optimization section contains the configuration of the model_optimization module.
+# Configuration for the data_preparation module
+data_preparation:
+  # Path to save the results of data preparation
+  output_path: Null
+
+  # Specifications for the input data file
+  input_file:
+    path: "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv"
+    type: "csv"
+    sep: ";"
+
+  # Definition of the data preparation pipeline
+  pipeline:
+    # Configuration for the SimpleImputer transformer
+    _SimpleImputer: 
+      - target: "hum"  # Target column for imputation
+        config:
+          strategy: "mean"  # Imputation strategy (mean value)
+
+    # Configuration for the OneHotEncoder transformer
+    _OneHotEncoder: 
+      - target: "season"  # Column to be one-hot encoded
+        config:
+          prefix: "season"  # Prefix for the new columns
+          dtype: "int"  # Data type of the encoded columns
+      - target: "mnth"
+        config:
+          prefix: "month"
+          dtype: "int"
+
+    # Configuration for the FeatureDropper transformer
+    _FeatureDropper: 
+      - target: "instant"  # Column to be dropped
+        config:
+          axis: 1  # Axis along which the column will be dropped
+          errors: "ignore"  # Error handling strategy
+
+# Configuration for the model_optimization module
 model_optimization:
-  # The output_path parameter specifies the path where the results of the model optimization will be saved.
-  output_path: "/home/davidrmn/Studies/introduction-data-science/results"
-  # The evaluation parameter specifies the evaluation of the model optimization.
+  # Path to save the results of model optimization
+  output_path: Null
+
+  # Settings for evaluating the model optimization process
   evaluation:
-    metric: "rmse"
-    cv: 5
+    metric: "rmse"  # Evaluation metric (Root Mean Squared Error)
+    cv: 5  # Number of cross-validation folds
