--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,9 @@ dependencies = [
   "missingno",
   "altair",
   "seaborn",
-  "scikit-learn"
+  "scikit-learn",
+  "dynaconf",
+  "tqdm"
 ]
 
 [project.urls]
