--- a/config/idstools/config.yml
+++ b/config/idstools/config.yml
@@ -1,75 +1,68 @@
-# This file contains the configuration for the idstools package.
-config:
-  # Configuration for the data_explorer module
-  data_explorer:
-    # Name of the class to be used
-    DataExplorer:
-      # Path to save the results of data exploration
-      output_path: Null
-      # Specifications for the input data file
-      input_file:
-        # File path for the input data
-        path: "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv"
-        # File format (csv is supported)
-        type: "csv"
-        # Separator used in the CSV file
-        separator: ";"
+# Configuration file for the IDSTools package.
+# This file contains settings for various modules like data exploration, data preparation, and model optimization.
+default:
+  example:
+    # Data Explorer Module Configuration
+    # This section configures the DataExplorer class for initial analysis of the dataset.
+    data_explorer:
+      DataExplorer:
+        output_path: results  # Output path for saving the results. If Null, results are not saved to a file.
+        input_file:
+          path: data/BikeRentalDaily_train.csv  # Path to the dataset file.
+          type: csv  # Type of the dataset file. Currently, only CSV format is supported.
+          separator: ;  # Character used to separate values in the CSV file.
 
-      # Definition of the data exploration pipeline
-      pipeline:
-        descriptive_analysis: True  # Analyze descriptive statistics of the dataset
-        #missing_value_analysis: True  # Analyze missing values in the dataset
-        #correlation_analysis: True  # Analyze correlations in the dataset
-        #outliers_analysis: True  # Analyze outliers in the dataset
+        # Pipeline for performing data exploration tasks.
+        # Various analyses can be enabled or disabled as needed.
+        pipeline:
+          descriptive_analysis: True  # Enables analysis of basic descriptive statistics (e.g., mean, median).
+          # Uncomment the following lines to enable additional analyses.
+          missing_value_matrix_plot: True  # Enables analysis of missing values in the dataset.
+          #correlation_analysis: True  # Enables analysis of feature correlations.
+          #outliers_analysis: True  # Enables detection and analysis of outliers in the dataset.
 
-  # Configuration for the data_preparation module
-  data_preparation:
-    # Name of the class to be used
-    DataPreparation:
-      # Path to save the results of data preparation
-      output_path: Null
-      # Specifications for the input data file
-      input_file:
-        # File path for the input data
-        path: "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv"
-        # File format (csv is supported)
-        type: "csv"
-        # Separator used in the CSV file
-        separator: ";"
+    # Data Preparation Module Configuration
+    # This section is used to configure the DataPreparation class for preprocessing the dataset.
+    data_preparation:
+      DataPreparation:
+        output_path: Null  # Output path for saving preprocessed data. If Null, data is not saved to a file.
+        input_file:
+          path: data/BikeRentalDaily_train.csv  # Input dataset file path.
+          type: csv  # Dataset file type. Currently, only CSV is supported.
+          separator: ;  # Delimiter used in the CSV file.
 
-      # Definition of the data preparation pipeline
-      pipeline:
-        # Configuration for the SimpleImputer transformer
-        _SimpleImputer: 
-          - target: "hum"  # Target column for imputation
-            config:
-              strategy: "mean"  # Imputation strategy (mean value)
+        # Pipeline for data preparation steps.
+        # Configurations for data imputation, encoding, and feature selection.
+        pipeline:
+          _SimpleImputer: 
+            - target: hum  # Target column for missing value imputation.
+              config:
+                strategy: mean  # Imputation strategy, e.g., using the mean value.
 
-        # Configuration for the OneHotEncoder transformer
-        _OneHotEncoder: 
-          - target: "season"  # Column to be one-hot encoded
-            config:
-              prefix: "season"  # Prefix for the new columns
-              dtype: "int"  # Data type of the encoded columns
-          - target: "mnth"
-            config:
-              prefix: "month"
-              dtype: "int"
+          _OneHotEncoder: 
+            - target: season  # Column for one-hot encoding.
+              config:
+                prefix: season  # Prefix for new dummy columns.
+                dtype: int  # Data type for the new columns.
+            - target: mnth
+              config:
+                prefix: month
+                dtype: int
 
-        # Configuration for the FeatureDropper transformer
-        _FeatureDropper: 
-          - target: "instant"  # Column to be dropped
-            config:
-              axis: 1  # Axis along which the column will be dropped
-              errors: "ignore"  # Error handling strategy
+          _FeatureDropper: 
+            - target: instant  # Column to be removed.
+              config:
+                axis: 1  # Axis to drop (1 for columns).
+                errors: ignore  # How to handle errors during dropping.
 
-  # Configuration for the model_optimization module
-  model_optimization:
-    ModelOptimization:
-      # Path to save the results of model optimization
-      output_path: Null
+    # Model Optimization Module Configuration
+    # This section configures the ModelOptimization class for tuning and evaluating models.
+    model_optimization:
+      ModelOptimization:
+        output_path: results  # Path for saving optimization results. If Null, results are not saved.
 
-      # Settings for evaluating the model optimization process
-      evaluation:
-        metric: "rmse"  # Evaluation metric (Root Mean Squared Error)
-        cv: 5  # Number of cross-validation folds
+        # Evaluation settings for the model optimization process.
+        # Defines the metric and method used for evaluating model performance.
+        evaluation:
+          metric: rmse  # Metric for model evaluation, e.g., Root Mean Squared Error.
+          cv: 5  # Number of folds for cross-validation.
