--- a/config/idstools/config.yml
+++ b/config/idstools/config.yml
@@ -5,73 +5,73 @@ default:
   # This section configures the DataExplorer class for initial analysis of the dataset.
   data_explorer:
     DataExplorer:
-      output_path: results  # Output path for saving the results. If Null, results are not saved to a file.
-      input_path: data/BikeRentalDaily_train.csv  # Path to the dataset file.
-      input_type: csv  # Type of the dataset file. Currently, only CSV format is supported.
-      input_delimiter: ;  # Character used to separate values in the CSV file.
+      output_path: Null  # Output path for saving the results. If Null, results are not saved to a file.
+      input_path:   # Path to the dataset file.
+      input_type:   # Type of the dataset file. Currently, only CSV format is supported.
+      input_delimiter:   # Character used to separate values in the CSV file.
 
       # Pipeline for performing data exploration tasks.
       # Various analyses can be enabled or disabled as needed.
       pipeline:
-        descriptive_analysis: True  # Enables analysis of basic descriptive statistics (e.g., mean, median).
-        # Uncomment the following lines to enable additional analyses.
-        missing_value_matrix_plot: True  # Enables analysis of missing values in the dataset.
-        missing_value_bar_plot: True  # Enables analysis of missing values in the dataset.
-        correlation_heatmap_plot: True  # Enables analysis of feature correlations.
-        #outliers_analysis: True  # Enables detection and analysis of outliers in the dataset.
+      # Boolean values for enabling or disabling various analyses.
+        descriptive_analysis: False  # Enables analysis of basic descriptive statistics (e.g., mean, median).
+        missing_value_matrix_plot: False  # Enables analysis of missing values in the dataset.
+        missing_value_bar_plot: False  # Enables analysis of missing values in the dataset.
+        correlation_heatmap_plot: False  # Enables analysis of feature correlations.
+        #outliers_analysis: False  # Enables detection and analysis of outliers in the dataset.
 
   # Data Preparation Module Configuration
   # This section is used to configure the DataPreparation class for preprocessing the dataset.
   data_preparation:
     DataPreparation:
-      output_path: Null  # Output path for saving preprocessed data. If Null, data is not saved to a file.
-      input_path: data/BikeRentalDaily_train.csv  # Path to the dataset file.
-      input_type: csv  # Type of the dataset file. Currently, only CSV format is supported.
-      input_delimiter: ;  # Character used to separate values in the CSV file.
+      output_path:   # Output path for saving preprocessed data. If Null, data is not saved to a file.
+      input_path:   # Path to the dataset file.
+      input_type:   # Type of the dataset file. Currently, only CSV format is supported.
+      input_delimiter:   # Character used to separate values in the CSV file.
 
       # Pipeline for data preparation steps.
       # Configurations for data imputation, encoding, and feature selection.
       pipeline:
         _SimpleImputer: 
-          - target: hum  # Target column for missing value imputation.
+          - target:   # Target column for missing value imputation.
             config:
-              strategy: mean  # Imputation strategy, e.g., using the mean value.
+              strategy:   # Imputation strategy, e.g., using the mean value.
 
         _OneHotEncoder: 
-          - target: season  # Column for one-hot encoding.
+          - target:   # Column for one-hot encoding.
             config:
-              prefix: season  # Prefix for new dummy columns.
-              dtype: int  # Data type for the new columns.
-          - target: mnth
+              prefix:   # Prefix for new dummy columns.
+              dtype:   # Data type for the new columns.
+          - target: 
             config:
-              prefix: month
-              dtype: int
+              prefix: 
+              dtype: 
 
         _FeatureDropper: 
-          - target: instant  # Column to be removed.
+          - target:   # Column to be removed.
             config:
-              axis: 1  # Axis to drop (1 for columns).
-              errors: ignore  # How to handle errors during dropping.
+              axis:   # Axis to drop (1 for columns).
+              errors:   # How to handle errors during dropping.
 
   # Model Optimization Module Configuration
   # This section configures the ModelOptimization class for tuning and evaluating models.
   model_optimization:
     ModelOptimization:
-      output_path: results  # Path for saving optimization results. If Null, results are not saved.
+      output_path:   # Path for saving optimization results. If Null, results are not saved.
 
       # Evaluation settings for the model optimization process.
       # Defines the metric and method used for evaluating model performance.
       evaluation:
-        metric: rmse  # Metric for model evaluation, e.g., Root Mean Squared Error.
-        cv: 5  # Number of folds for cross-validation.
+        metric:   # Metric for model evaluation, e.g., Root Mean Squared Error.
+        cv:   # Number of folds for cross-validation.
 
 custom:
   # Data Explorer Module Configuration
   # This section configures the DataExplorer class for initial analysis of the dataset.
   data_explorer:
     DataExplorer:
-      output_path: results  # Output path for saving the results. If Null, results are not saved to a file.
-      input_path: data/BikeRentalDaily_test.csv  # Path to the dataset file.
+      output_path:   # Output path for saving the results. If Null, results are not saved to a file.
+      input_path: data/BikeRentalDaily_train.csv  # Path to the dataset file.
       input_type: csv  # Type of the dataset file. Currently, only CSV format is supported.
       input_delimiter: ;  # Character used to separate values in the CSV file.
 
@@ -79,7 +79,6 @@ custom:
       # Various analyses can be enabled or disabled as needed.
       pipeline:
         descriptive_analysis: True  # Enables analysis of basic descriptive statistics (e.g., mean, median).
-        # Uncomment the following lines to enable additional analyses.
         missing_value_matrix_plot: True  # Enables analysis of missing values in the dataset.
         missing_value_bar_plot: True  # Enables analysis of missing values in the dataset.
         correlation_heatmap_plot: True  # Enables analysis of feature correlations.
@@ -102,14 +101,12 @@ custom:
             config:
               axis: 1  # Axis to drop (1 for columns).
               errors: ignore  # How to handle errors during dropping.
-          - target: hum
+        _CustomTransformer:
+          - func: replace_dot_with_hyphen  # Function to apply to the target column.
+            module: idstools._custom_pipelines  # Module containing the function.
             config:
-              axis: 1
-              errors: ignore
-          - target: windspeed
-            config:
-              axis: 1
-              errors: ignore
+              target: dteday  # Target column for transformation.
+
 
   # Model Optimization Module Configuration
   # This section configures the ModelOptimization class for tuning and evaluating models.
